WIP - Initial Node widget implementation
TODO - Figure out how to use the CustomWidgetState

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ git = "https://github.com/bluss/petulant-avenger-graphlibrary"
 [dependencies.conrod]
 git = "https://github.com/PistonDevelopers/conrod"
 
+[dependencies.elmesque]
+git = "https://github.com/mitchmindtree/elmesque"
+
 [dependencies.pistoncore-glutin_window]
 git = "https://github.com/PistonDevelopers/glutin_window.git"
 
