--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: rust
+
+addons:
+  apt:
+    packages:
+    - libxxf86vm-dev
+
 script:
   - cargo build -v
   - cargo doc -v
+
 after_success:
   - curl http://docs.piston.rs/travis-doc-upload.sh | sh
