--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,24 +9,13 @@ name = "demo"
 path = "examples/demo.rs"
 
 
-[dependencies.conrod]
-git = "https://github.com/PistonDevelopers/conrod"
-
-[dependencies.elmesque]
-git = "https://github.com/mitchmindtree/elmesque"
-
-[dependencies.pistoncore-glutin_window]
-git = "https://github.com/PistonDevelopers/glutin_window.git"
-
-[dependencies.piston2d-opengl_graphics]
-git = "https://github.com/PistonDevelopers/opengl_graphics.git"
-
-[dependencies.piston2d-graphics]
-git = "https://github.com/PistonDevelopers/graphics.git"
-
-[dependencies.piston]
-git = "https://github.com/PistonDevelopers/piston/"
 
 [dependencies]
 uuid = "0.1"
 rustc-serialize = "*"
+conrod = "*"
+elmesque = "*"
+pistoncore-glutin_window = "0.1.0"
+piston2d-opengl_graphics = "*"
+piston2d-graphics = "*"
+piston = "*"
