--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ repository = "https://github.com/PistonDevelopers/mush"
 description = "Visual graph/dialogue editor"
 
 [dependencies]
-imgui = "0.0.13"
+imgui = {git = "https://github.com/Gekkio/imgui-rs", version = "0.0.14-pre"}
 glium = { version = "0.16", default-features = true }
-imgui-glium-renderer = "0.0.13"
+imgui-glium-renderer =  {git = "https://github.com/Gekkio/imgui-rs", version = "0.0.14-pre"}
